# rabbitmq-rpc-rs

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: client.rs  pubsub_publisher.rs  pubsub_subscriber.rs  rpc_client.rs  rpc_server.rs  server.rs  structs.rs
rabbitmq_rpc/: Cargo.toml
rabbitmq_rpc/src/: lib.rs  publisher.rs  rabbitmq_replier.rs  rabbitmq_requester.rs  replier.rs  requester.rs  subscriber.rs
