[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
rabbitmq_rpc = { path = "../rabbitmq_rpc" }
# error handling
anyhow = "1.0.68"
# serialization
serde = "1.0.152"
bincode = "1.3.3"
# async
futures = "0.3.26"
tokio = "1.25.0"
# logging
tracing-subscriber = "0.3.16"
log = "0.4.17"

[[example]]
name = "client"
path = "src/client.rs"

[[example]]
name = "server"
path = "src/server.rs"
