[package]
name = "rabbitmq_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
# rabbitmq
amqprs = "1.0.5"
# error handling
anyhow = "1.0.68"
# async
async-trait = "0.1.64"
futures = "0.3.26"
tokio = "1.25.0"
# static variables
lazy_static = "1.4.0"
# uuid
uuid = { version = "1.3.0", features = ["v4"] }
